# lazyreno

./: .SRCINFO  .gitignore  .goreleaser.yml  .talismanrc  CLAUDE.md  Cargo.toml  LICENSE  PKGBUILD  README.md  demo.tape  go.mod  go.sum
.github/workflows/: ci.yml
cmd/lazyreno/: main.go
docs/superpowers/plans/: 2026-03-10-lazyreno.md
docs/superpowers/specs/: 2026-03-10-lazyreno-design.md
internal/app/: delegates.go  items.go  keys.go  messages.go  model.go  update.go  update_test.go  view.go
internal/backend/: cache.go  cache_test.go  github.go  github_test.go  renovate.go  renovate_test.go  types.go
internal/config/: config.go  config_test.go
internal/tabs/jobs/: keys.go
internal/tabs/prs/: keys.go
internal/tabs/status/: keys.go
internal/ui/: confirm.go  header.go  help.go  panel.go  statusbar.go  styles.go
lazyreno-rs/src/: app.rs  event.rs  keys.rs  lib.rs  main.rs  types.rs
lazyreno-rs/src/api/: fetcher.rs  github.rs  renovate.rs
lazyreno-rs/src/ui/: confirm.rs  detail.rs  flash.rs  help.rs  jobs.rs  mod.rs  pr_table.rs  repos_overlay.rs  sidebar.rs  status.rs  theme.rs
lazyreno-rs/tests/: renovate_deser.rs
lazyreno-rs/tests/fixtures/: renovate_jobs.json  (+1 more)
src/: app.rs  config.rs  event.rs  keys.rs  main.rs  types.rs
src/api/: fetcher.rs  github.rs  mod.rs  renovate.rs
src/ui/: activity.rs  confirm.rs  detail.rs  flash.rs  footer.rs  help.rs  jobs.rs  loading.rs  mod.rs  pr_table.rs  repos_overlay.rs  sidebar.rs  status.rs  theme.rs
tests/: renovate_deser.rs
tests/fixtures/: renovate_jobs.json  renovate_status.json
